use DrawGradient() instead of doing it manually (tdf#145796)

Change-Id: Ib771eb2ae35f68c81ef1fdcb1e4e3bf5d24a0dcc